reference: added Auth0 authenticated backend requests!

--- a/public-config.json
+++ b/public-config.json
@@ -1,6 +1,7 @@
 {
   "auth0": {
     "domain": "sigmadelta-io.eu.auth0.com",
-    "clientId": "if8aYXVlRCFJz7tfQNTtmkVOoOTBighx"
+    "clientId": "if8aYXVlRCFJz7tfQNTtmkVOoOTBighx",
+    "audience": "http://localhost:3000"
   }
 }
