--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public",
+    "start": "sirv public --host 0.0.0.0",
     "deploy": "npm run build && ./node_modules/gh-pages/bin/gh-pages.js -d public/"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-pro": "^5.13.0",
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-promise": "^4.2.1",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
@@ -19,12 +24,7 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.6.5",
-    "@fortawesome/fontawesome-pro": "^5.13.0",
     "bulma": "^0.8.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-promise": "^4.2.1",
     "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1",
     "rollup-plugin-scss": "^2.4.0",
