--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
-  },
-  "dependencies": {
-    "@auth0/auth0-spa-js": "^1.6.5",
+    "svelte": "^3.0.0",
     "bulma": "^0.8.2",
     "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1",
@@ -31,5 +28,7 @@
     "sass": "^1.26.3",
     "sirv-cli": "^0.4.4",
     "svelte-preprocess": "^3.7.1"
+  },
+  "dependencies": {
   }
 }
