--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
   "devDependencies": {
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-json": "^4.0.2",
+    "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-promise": "^4.2.1",
-    "rollup": "^1.20.0",
+    "rollup": "^2.12.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0",
     "bulma": "^0.8.2",
     "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1",
@@ -30,5 +29,6 @@
     "svelte-preprocess": "^3.7.1"
   },
   "dependencies": {
+    "svelte": "^3.0.0"
   }
 }
